# Braun_belt

./: AGENTS.md  CMakeLists.txt  ReadMe.md
Part_1/0_priority_container/: priority_collection_2_1.cpp  task.md
Part_1/1_hash_set/: hash_set.cpp  task.md
Part_1/2_set_iterator++/: set_iterator_next.cpp  task.md
Part_1/3_hash_point/: hash_point.cpp  task.md
Part_1/4_hash_person/: hash_person.cpp  task.md
Part_1/5_secondary_index/: secondary_index.cpp  step08.cc  task.md
Part_2/0_spendings_xml/: spendings_xml.cpp  task.md  xml.cpp  xml.h
Part_2/1_spendings_json/: json.cpp  spendings_json.cpp  task.md
Part_2/2_ini/: ini.cpp  ini.h  task.md  test_ini.cpp
test_framework/: profile.h  test_runner.h
